--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
     - "8"
 before_install:
+    - sudo apt-get update
+    - sudo apt-get install libpcap-dev
     - npm install -g greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 script:
